--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
+# Clerk Configuration
 # Visit https://dashboard.clerk.com/last-active?path=api-keys to find your API Keys
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key
+CLERK_SECRET_KEY=your_clerk_secret_key
 
 # The route at which your authentication flow lives, for more information see: https://clerk.com/docs/deployments/clerk-environment-variables
 NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
@@ -12,3 +13,18 @@ NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL="/dashboard"
 
 NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL="/dashboard"
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL="/dashboard"
+
+# Supabase Configuration
+# Find these in your Supabase project settings under API
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Supabase Service Role Key (for database setup only - DO NOT expose in client code)
+# Find this in Supabase Dashboard > Settings > API > Service role (secret)
+# Only needed for running npm run setup:db
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# Clerk JWT Template Configuration
+# IMPORTANT: This must match the exact name of the JWT template you create in Clerk Dashboard
+# The JWT template should include user tier claims for Supabase RLS
+NEXT_PUBLIC_CLERK_JWT_TEMPLATE_NAME=supabase
