--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "dev": "next dev -p 3050",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup:db": "node scripts/setup-database.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.24.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.53.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
     "next": "15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
